# aktualizr

./: .bazelrc  .gitignore  .gitmodules  BUILD  MODULE.bazel  WORKSPACE
.github/workflows/: ci.yml  ci2.yml
config/: BUILD
docker/: Dockerfile.debian.bullseye  Dockerfile.ubuntu.bionic  Dockerfile.ubuntu.focal  Dockerfile.ubuntu.xenial
include/libaktualizr/: config.h
src/aktualizr_get/: BUILD  main.cc
src/aktualizr_info/: BUILD  aktualizr_info_test.cc
src/aktualizr_primary/: BUILD  main.cc  primary_secondary_registration_test.cc  secondary_config.cc
src/aktualizr_secondary/: BUILD  aktualizr_secondary_ostree_test.cc  aktualizr_secondary_test.cc  main.cc  secondary_rpc_test.cc
src/cert_provider/: BUILD  main.cc
src/libaktualizr/: BUILD
src/libaktualizr-c/: BUILD
src/libaktualizr-posix/: BUILD
src/libaktualizr-posix/asn1/: asn1_test.cc
src/libaktualizr/campaign/: campaign_test.cc
src/libaktualizr/crypto/: hash_test.cc
src/libaktualizr/logging/: default_log_sink.cc  logging.cc  logging.h
src/libaktualizr/package_manager/: fetcher_death_test.cc  fetcher_test.cc  packagemanagerinterface.cc
src/libaktualizr/primary/: aktualizr.cc  aktualizr_test.cc  custom_url_test.cc  device_cred_prov_test.cc  empty_targets_test.cc  metadata_expiration_test.cc  metadata_fetch_test.cc  provisioner.cc  provisioner_test.cc  reportqueue_test.cc  reregistration_test.cc  target_mismatch_test.cc  uptane_key_test.cc
src/libaktualizr/storage/: embed_schemas.py  sql_utils_test.cc  sqlstorage_test.cc  storage_atomic_test.cc  storage_common_test.cc
src/libaktualizr/uptane/: director_test.cc  tuf_test.cc  uptane_cancellation_test.cc  uptane_ci_test.cc  uptane_delegation_test.cc  uptane_network_test.cc  uptane_serial_test.cc  uptane_test.cc
src/libaktualizr/utilities/: aktualizr_version.cc  apiqueue.cc  utils_test.cc
src/sota_tools/: BUILD  garage_check.cc  garage_deploy.cc  garage_push.cc
src/uptane_generator/: BUILD  image_repo.cc  main.cc  repo_test.cc
src/uptane_generator/run/: serve_repo.py
src/virtual_secondary/: BUILD  bad_rotation_test.cc  virtual_secondary_test.cc
tests/: BUILD
tests/uptane_repo_generation/: BUILD  generate_repo.sh
